# binance-rest-client

./: README.md  pyproject.toml
binanceRestClient/: __init__.py  async_tools.py  client.py  enums.py  exceptions.py  settings.py
docs/: BINANCE_INTEGRATION_GUIDE.md  README.md  api_reference.py  example_prompt.md  examples.py  method_reference.py
tests/: test_pytest.py
